This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: ICC compiler warnings
Type: Stage:
Components: Versions: Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: python-dev, vstinner
Priority: normal Keywords:

Created on 2015-09-21 20:36 by vstinner, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Messages (5)
msg251253 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2015-09-21 20:36
http://buildbot.python.org/all/builders/x86-64%20Windows%20Server%202012R2%20ICC%203.x/builds/109/steps/compile/logs/warnings%20%2832%29

     2>C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj(418,5): warning : Toolset Intel C++ Compiler 16.0 is not used for official builds. Your build may have errors or incompatibilities.
     2>..\Modules\posixmodule.c(4612): warning #3199: "defined" is always false in a macro expansion in Microsoft mode [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj]
     2>..\Modules\posixmodule.c(4612): warning #3199: "defined" is always false in a macro expansion in Microsoft mode [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj]
     2>..\Modules\posixmodule.c(4774): warning #3199: "defined" is always false in a macro expansion in Microsoft mode [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj]
     2>..\Modules\posixmodule.c(4774): warning #3199: "defined" is always false in a macro expansion in Microsoft mode [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj]
     2>..\Modules\_winapi.c(1083): warning #1478: function "GetVersion" (declared at line 110 of "C:\Program Files (x86)\Windows Kits\8.1\Include\um\sysinfoapi.h") was declared deprecated [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj]
     2>..\Objects\obmalloc.c(841): warning #170: pointer points outside of underlying object [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj]
     2>..\Objects\obmalloc.c(841): warning #170: pointer points outside of underlying object [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj]
     2>..\PC\winreg.c(885): warning #810: conversion from "void *" to "DWORD={unsigned long}" may lose significant bits [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj]
     2>..\PC\msvcrtmodule.c(544): warning #592: variable "st" is used before its value is set [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj]
     2>..\Python\sysmodule.c(830): warning #1478: function "GetVersionExA" (declared at line 433 of "C:\Program Files (x86)\Windows Kits\8.1\Include\um\sysinfoapi.h") was declared deprecated [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj]
    19>..\PC\_msi.c(1035): warning #810: conversion from "LPCTSTR={LPCSTR={const CHAR={char} *}}" to "int" may lose significant bits [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\_msi.vcxproj]
    19>..\PC\_msi.c(1036): warning #810: conversion from "LPCTSTR={LPCSTR={const CHAR={char} *}}" to "int" may lose significant bits [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\_msi.vcxproj]
    19>..\PC\_msi.c(1037): warning #810: conversion from "LPCTSTR={LPCSTR={const CHAR={char} *}}" to "int" may lose significant bits [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\_msi.vcxproj]
    19>..\PC\_msi.c(1038): warning #810: conversion from "LPCTSTR={LPCSTR={const CHAR={char} *}}" to "int" may lose significant bits [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\_msi.vcxproj]
    19>..\PC\_msi.c(1039): warning #810: conversion from "LPCTSTR={LPCSTR={const CHAR={char} *}}" to "int" may lose significant bits [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\_msi.vcxproj]
         C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj(418,5): warning : Toolset Intel C++ Compiler 16.0 is not used for official builds. Your build may have errors or incompatibilities.
         ..\Modules\posixmodule.c(4612): warning #3199: "defined" is always false in a macro expansion in Microsoft mode [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj]
         ..\Modules\posixmodule.c(4612): warning #3199: "defined" is always false in a macro expansion in Microsoft mode [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj]
         ..\Modules\posixmodule.c(4774): warning #3199: "defined" is always false in a macro expansion in Microsoft mode [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj]
         ..\Modules\posixmodule.c(4774): warning #3199: "defined" is always false in a macro expansion in Microsoft mode [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj]
         ..\Modules\_winapi.c(1083): warning #1478: function "GetVersion" (declared at line 110 of "C:\Program Files (x86)\Windows Kits\8.1\Include\um\sysinfoapi.h") was declared deprecated [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj]
         ..\Objects\obmalloc.c(841): warning #170: pointer points outside of underlying object [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj]
         ..\Objects\obmalloc.c(841): warning #170: pointer points outside of underlying object [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj]
         ..\PC\winreg.c(885): warning #810: conversion from "void *" to "DWORD={unsigned long}" may lose significant bits [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj]
         ..\PC\msvcrtmodule.c(544): warning #592: variable "st" is used before its value is set [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj]
         ..\Python\sysmodule.c(830): warning #1478: function "GetVersionExA" (declared at line 433 of "C:\Program Files (x86)\Windows Kits\8.1\Include\um\sysinfoapi.h") was declared deprecated [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\pythoncore.vcxproj]
         ..\PC\_msi.c(1035): warning #810: conversion from "LPCTSTR={LPCSTR={const CHAR={char} *}}" to "int" may lose significant bits [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\_msi.vcxproj]
         ..\PC\_msi.c(1036): warning #810: conversion from "LPCTSTR={LPCSTR={const CHAR={char} *}}" to "int" may lose significant bits [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\_msi.vcxproj]
         ..\PC\_msi.c(1037): warning #810: conversion from "LPCTSTR={LPCSTR={const CHAR={char} *}}" to "int" may lose significant bits [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\_msi.vcxproj]
         ..\PC\_msi.c(1038): warning #810: conversion from "LPCTSTR={LPCSTR={const CHAR={char} *}}" to "int" may lose significant bits [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\_msi.vcxproj]
         ..\PC\_msi.c(1039): warning #810: conversion from "LPCTSTR={LPCSTR={const CHAR={char} *}}" to "int" may lose significant bits [C:\Users\buildbot\buildarea\3.x.intel-windows-icc\build\PCbuild\_msi.vcxproj]
msg251255 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2015-09-21 20:38
New changeset a138a1131bae by Victor Stinner in branch 'default':
Issue #25207, #14626: Fix ICC compiler warnings in posixmodule.c
https://hg.python.org/cpython/rev/a138a1131bae
msg251256 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2015-09-21 20:45
New changeset 73867bf953e6 by Victor Stinner in branch 'default':
ssue #25207: fix ICC compiler warning in msvcrtmodule.c
https://hg.python.org/cpython/rev/73867bf953e6
msg251278 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2015-09-21 23:29
New changeset 170cd0104267 by Victor Stinner in branch 'default':
Issue #25207, #14626: Fix my commit.
https://hg.python.org/cpython/rev/170cd0104267
msg252896 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2015-10-12 22:21
I fixed some warnings.
History
Date User Action Args
2022-04-11 14:58:21adminsetgithub: 69394
2015-10-12 22:21:13vstinnersetstatus: open -> closed
resolution: fixed
messages: + msg252896
2015-09-21 23:29:45python-devsetmessages: + msg251278
2015-09-21 20:45:17python-devsetmessages: + msg251256
2015-09-21 20:38:00python-devsetnosy: + python-dev
messages: + msg251255
2015-09-21 20:36:38vstinnercreate