Issue #25207, #14626: Fix ICC compiler warnings in posixmodule.c

Replace "#if XXX" with #ifdef XXX".